--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -3,11 +3,16 @@
   padding: 2rem;
   box-shadow: 0.1rem 0.1rem 1.2rem lighten(color(grayishBlue), 15%);
   border-radius: 0.5rem;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  outline: 0;
 
   h2 {
     @include headingStyles;
     font-size: size(md);
     color: color(darkBlue);
+    transition: all 0.3s ease;
   }
 
   p {
@@ -15,6 +20,7 @@
     width: 75%;
     font-size: size(xxs) - 0.1rem;
     color: color(grayishBlue);
+    transition: all 0.3s ease;
   }
 
   .features-card-img {
@@ -28,15 +34,81 @@
   }
 }
 
+.features-card-title-container {
+  overflow: hidden;
+
+  .features-card-title::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    transform: translateY(-100%);
+    transition: 0.4s ease-in-out;
+    z-index: -1;
+  }
+}
+
+.features-card:hover .features-card-title::before,
+.features-card:focus .features-card-title::before {
+  transform: translateX(0);
+}
+
 .supervisor {
   border-top: 0.5rem solid color(cyan);
+
+  &:hover,
+  &:focus {
+    border-top: 0;
+
+    h2,
+    p {
+      color: color(white);
+    }
+
+    .features-card-title::before {
+      background-color: color(cyan);
+    }
+  }
 }
 .team-builder {
   border-top: 0.5rem solid color(red);
+  @extend .supervisor;
+
+  &:hover,
+  &:focus {
+    border-top: 0;
+
+    .features-card-title::before {
+      background-color: color(red);
+    }
+  }
 }
 .karma {
   border-top: 0.5rem solid color(orange);
+  @extend .supervisor;
+
+  &:hover,
+  &:focus {
+    border-top: 0;
+
+    .features-card-title::before {
+      background-color: color(orange);
+    }
+  }
 }
 .calculator {
   border-top: 0.5rem solid color(blue);
+  @extend .supervisor;
+
+  &:hover,
+  &:focus {
+    border-top: 0;
+
+    .features-card-title::before {
+      background-color: color(blue);
+    }
+  }
 }
