added hover effect on footer links

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -120,6 +120,12 @@
   a {
     @include headingStyles;
     color: color(blue);
+    outline: 0;
+
+    &:hover,
+    &:focus {
+      text-decoration: underline;
+    }
   }
 
   img {
