refactored footer scss

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,3 +1,4 @@
+// features section
 .features-container {
   overflow: hidden;
 
@@ -54,5 +55,32 @@
         grid-template-columns: 1fr;
       }
     }
+  }
+}
+
+// footer
+.footer {
+  @include flexCenter;
+  text-align: center;
+  flex-wrap: wrap;
+
+  h3 {
+    @include textStyles;
+    font-size: size(xxs);
+  }
+
+  a {
+    @include headingStyles;
+    color: color(blue);
+    outline: 0;
+
+    &:hover,
+    &:focus {
+      text-decoration: underline;
+    }
+  }
+
+  img {
+    width: 5rem;
   }
 }
